# esp-mqtt-led-emotion

./: .gitignore  CMakeLists.txt
components/mqtt_app_client/: CMakeLists.txt  mqtt_app_client.c
components/mqtt_app_client/include/: mqtt_app_client.h
components/wifi_setup/: CMakeLists.txt  wifi_setup.c  wifi_setup.h
main/: main.c
